# cscience-py-features-core

./: .gitignore  LICENSE  README.md  pyproject.toml
export/: exported_code.py  exported_file_structure.txt  exported_md.md  exported_toml.toml
project-maintenance/src/exporting/: cli.py
project-maintenance/src/fixtures/: cli.py  image_fixtures.py
project-maintenance/src/templating/: cli.py
resources/: README_TEMPLATE.md  fixture-images.csv
tests/: export_for_gpt.py  exported_code.py  exported_toml.toml
tools/: create_feature_template.py  export_for_gpt.py  exported_code.py  exported_file_structure.txt  exported_toml.toml
tools/export/: exported_code.py  exported_file_structure.txt  exported_toml.toml
