[project]
name = "cscience-py-features-core"
version = "0.1.0"
description = "Workspace for CScience Python feature API and feature implementations."
requires-python = ">=3.13,<3.14"
dependencies = [
    "cscience-feature-api",
    "cscience-feature-clip",
    "cscience-feature-clip-spatial",
    "cscience-feature-asr-whisper",
    "cscience-feature-nsfw-image",
    "cscience-feature-ocr-tesseract",
    "numpy>=2.4.6",
    "torch>=2.11.0",
    "icontract>=2.7.3",
]

[tool.uv]
package = false

[tool.uv.sources]
cscience-feature-api = { workspace = true }
cscience-feature-asr-whisper = { workspace = true }
cscience-feature-clip = { workspace = true }
cscience-feature-clip-spatial = { workspace = true }
cscience-feature-nsfw-image = { workspace = true }
cscience-feature-ocr-tesseract = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/cscience-feature-api",
    "packages/cscience-feature-asr-whisper",
    "packages/cscience-feature-clip",
    "packages/cscience-feature-clip-spatial",
    "packages/cscience-feature-nsfw-image",
    "packages/cscience-feature-ocr-tesseract",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
